# ableton_mcp

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  TEMP_NOTES.md  pyproject.toml
AbletonMCP_Remote_Script/: __init__.py  arrangement_ops.py  browser_ops.py  core.py  device_ops.py  memory_bank_ops.py  rack_ops.py  scene_ops.py  session_clip_ops.py  song_ops.py  take_lane_ops.py  track_ops.py  view_ops.py
docs/: README.md  ableton_live_mcp_discoveries.md  api-comparison-and-codegen-prep.md  badges.md  command-catalog.md  feasibility-spike-step-1-2.md  google-cloud-run-deployment.md  install-and-use-mcp.md  manual-validation-backlog.md  remote-script-module-split-plan.md
mcp_server/: __init__.py  _registry.py  client.py  command_specs.py  server.py
mcp_server/tools/: __init__.py  _params.py  browser.py  (+8 more)
scripts/: compute_metrics.py  reload_ableton_remote_script.sh  validate_arrangement_batch_2.py  validate_browser_loading_batch.py  validate_device_audit_batch.py  validate_macro_and_user_rack_batch.py  validate_rack_and_drum_batch.py  validate_system_owned_racks_batch.py  validate_take_lanes_batch.py  validate_track_controls_batch.py
tests/: test_browser_loading_contracts.py  test_client.py  test_command_specs.py  test_device_contracts.py  test_rack_ops_contracts.py  test_remote_script_contracts.py  test_server.py  test_system_owned_rack_contracts.py  test_take_lane_ops_contracts.py  test_track_ops_contracts.py  test_validate_arrangement_batch_2.py  test_validate_browser_loading_batch.py  test_validate_macro_and_user_rack_batch.py
