[project]
name = "ableton-mcp-v2"
version = "1.0.0"
description = "Comprehensive MCP server for Ableton Live 12"
requires-python = ">=3.10"
dependencies = [
    "fastmcp==3.2.0",
]

[project.scripts]
ableton-mcp = "mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server"]

[dependency-groups]
dev = [
    "coverage>=7.6",
]

[tool.coverage.run]
source = ["mcp_server"]
branch = true

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
